--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,10 @@
   </head>
 
   <body>
-    <%= yield %>
+    <%= render "shared/navigation" %>
+    <%= render "shared/flash" %>
+    <div class="container">
+      <%= yield %>
+    </div>
   </body>
 </html>
