add logo to landing page

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,3 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+<div style='text-center'>
+  <img class='img-fluid' src='https://static1.squarespace.com/static/5c8176839b8fe8489c416c7d/t/5f0607fa0e04e91220d4665e/1622657153457/?format=1000w' />
+</div>
